# zuul-weeder

./: .gitignore  .gitreview  .hlint.yaml  .zuul.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  default.nix  flake.nix  hie.yaml  weeder.dhall  weeder.toml  zuul-weeder.cabal
.github/workflows/: release.yml
app/: Main.hs  grafana-dashboard.dhall
dists/: graph.js  remixicon.min.css  tailwind.css
src/: ZuulWeeder.hs
src/Zuul/: Config.hs  ConfigLoader.hs  ServiceConfig.hs  Tenant.hs  UI.css  UI.hs  UI.js  Weeder.hs  ZKDump.hs  ZooKeeper.hs
src/ZuulWeeder/: Graph.hs  Main.hs  Monitoring.hs  Prelude.hs  UI.hs
src/ZuulWeeder/UI/: App.hs  CSS.hs  Colors.hs  D3.hs  Dot.hs  Info.hs  Tree.hs  Vertex.hs
test/: Spec.hs
test/fixtures/: dataset1.yaml  jobs.golden  jobs.yaml  nodesets.golden  nodesets.yaml  pipelines.golden  pipelines.yaml  project-templates.golden  project-templates.yaml  projects.golden  projects.yaml  system-config.golden  system-config.json  vertex-git.golden  vertex-pipeline.golden  zuul.conf  zuul.golden
