cabal-version:       3.0
name:                zuul-weeder
version:             0.1.0.0
synopsis:            Detect dead configuration in Zuul
description:
    Find declaration and analyze usage from zookeeper dump.
    .
homepage:            https://github.com/softwarefactory-project/zuul-weeder#readme
bug-reports:         https://github.com/softwarefactory-project/zuul-weeder/issues
license:             Apache-2.0
license-file:        LICENSE
-- author:
-- maintainer:
copyright:           2022 Red Hat
category:            Development
build-type:          Simple
extra-doc-files:     CHANGELOG.md
                     README.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/softwarefactory-project/zuul-weeder.git

common common-options
  build-depends:       base                   < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wunused-packages
  default-extensions:  OverloadedStrings
                     , RecordWildCards
  default-language:    Haskell2010

library
  import:              common-options
  build-depends:       aeson
                     , dhall
                     , algebraic-graphs
                     , mtl
                     , lens
                     , text
                     , streaming
                     , directory
                     , filepath
                     , uri-encode
                     , bytestring
                     , yaml
                     , containers
  hs-source-dirs:      src
  exposed-modules:     Zuul.Weeder
                     , Zuul.ZKDump
                     , Zuul.ConfigLoader

executable zuul-weeder
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       zuul-weeder
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite zuul-weeder-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       tasty                      >= 0.11.2   && < 1.5
                     , tasty-hunit                >= 0.10     && < 0.11
                     , aeson
                     , zuul-weeder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
