cabal-version:       3.0
name:                zuul-weeder
version:             0.1.0.0
synopsis:            Detect dead configuration in Zuul
description:
    Find declaration and analyze usage from zookeeper dump.
    .
homepage:            https://github.com/softwarefactory-project/zuul-weeder#readme
bug-reports:         https://github.com/softwarefactory-project/zuul-weeder/issues
license:             Apache-2.0
license-file:        LICENSE
-- author:
-- maintainer:
copyright:           2022 Red Hat
category:            Development
build-type:          Simple
extra-doc-files:     CHANGELOG.md
                     README.md
extra-source-files:  src/Zuul/UI.css src/Zuul/UI.js
tested-with:         GHC == 9.2.2

source-repository head
  type:                git
  location:            https://github.com/softwarefactory-project/zuul-weeder.git

common common-options
  build-depends:       base                   < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wunused-packages
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , StrictData
                     , ViewPatterns
                     , DeriveGeneric
                     , DerivingVia
                     , DeriveAnyClass
                     , DerivingStrategies
                     , FlexibleContexts
                     , MultiParamTypeClasses
                     , OverloadedLabels
                     , ImportQualifiedPost
                     , BlockArguments
                     , DataKinds
                     , TypeApplications
                     , TypeOperators
                     , QuasiQuotes
                     , PatternSynonyms
                     , GeneralizedNewtypeDeriving
                     , NegativeLiterals
                     , NamedFieldPuns
                     , NumericUnderscores
                     , LambdaCase
                     -- For the new record dot syntax
                     -- , NoFieldSelectors
                     , DuplicateRecordFields
                     , OverloadedRecordDot
  default-language:    Haskell2010

library
  import:              common-options
  build-depends:       aeson >= 2
                     , algebraic-graphs
                     , mtl
                     , transformers
                     , lens
                     , generic-lens
                     , text
                     , streaming
                     , directory
                     , filepath
                     , uri-encode
                     , bytestring
                     , text-display
                     , yaml
                     , containers
                     , unordered-containers
                     , vector
                     , ini
                     , witch
                     , pretty-simple
                     , clock
                     , typed-process
                     , exceptions
                     , hashable
                     , network-uri
                     -- Main
                     , optparse-applicative
                     -- UI
                     , servant-server >= 0.19
                     , warp
                     , lucid
                     , servant-lucid
                     , string-qq
                     , http-api-data
  hs-source-dirs:      src
  exposed-modules:     Zuul.ZooKeeper
                     , Zuul.Config
                     , Zuul.ConfigLoader
                     , Zuul.Tenant
                     , Zuul.ServiceConfig
                     , ZuulWeeder.Prelude
                     , ZuulWeeder.Graph
                     , ZuulWeeder.Main
                     , ZuulWeeder.UI

executable zuul-weeder
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       zuul-weeder
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite zuul-weeder-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       tasty                      >= 0.11.2   && < 1.5
                     , tasty-hunit                >= 0.10     && < 0.11
                     , tasty-golden
                     , containers
                     , text
                     , aeson
                     , pretty-simple
                     , yaml
                     , zuul-weeder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
