cabal-version:       3.0
name:                zuul-weeder
version:             0.1.3
synopsis:            Zuul configuration analyzer
description:
    Analyze [zuul-ci.org](https://zuul-ci.org) configuration.

    Use this service to inspect the configurations objects loaded in a [zuul](https://zuul-ci.org) system.

    This graph shows the module dependencies (generated with [calligraphy](https://github.com/jonascarpay/calligraphy)):

     ![dependencies-graph](doc/modules.svg)

homepage:            https://github.com/softwarefactory-project/zuul-weeder#readme
bug-reports:         https://github.com/softwarefactory-project/zuul-weeder/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Tristan Cacqueray
maintainer:          tdecacqu@redhat.com fboucher@redhat.com
copyright:           2022 Red Hat
category:            Development
build-type:          Simple
extra-doc-files:     CHANGELOG.md
                     README.md
                     doc/*.svg
tested-with:         GHC == 9.2.2

source-repository head
  type:                git
  location:            https://github.com/softwarefactory-project/zuul-weeder.git

common common-options
  build-depends:       base                   < 5
  ghc-options:         -Weverything
                       -- ^ -Weverything activate all the warnings, below is a list of exceptions:
                       -- GeneralizedNewtypeDeriving is not safe, so lets not bother with safe inference
                       -Wno-unsafe -Wno-missing-safe-haskell-mode
                       -- Prelude is implicitly imported, not sure what this warning is about...
                       -Wno-implicit-prelude
                       -- Enable import without list of symbols
                       -Wno-missing-import-lists
                       -- Enable omiting kind signature
                       -Wno-missing-kind-signatures
                       -- Enable omiting deriving strategy
                       -Wno-missing-deriving-strategies
                       -- Enable flexible definitions in 'where' clause
                       -Wno-monomorphism-restriction -Wno-missing-local-signatures
                       -- Disable specialization warning
                       -Wno-missed-specialisations -Wno-all-missed-specialisations

                       -- Make build logs more tidy
                       -fhide-source-paths
                       -- Write hie file, for calligraphy and weeder analysis
                       -fwrite-ide-info
  default-extensions:
                     -- Enable typed string literals
                       OverloadedStrings
                     -- Enable deriving lens from #label
                     , OverloadedLabels
                     -- Enable deriving newtype
                     , DerivingStrategies
                     -- Enable deriving Hashable
                     , DeriveAnyClass
                     -- Enable using term in types
                     , DataKinds
                     -- Shorter do block syntax for lucid
                     , BlockArguments
                     -- Shorter syntax for case expression:
                     , LambdaCase
                     -- Enable applying function in pattern match
                     , ViewPatterns
                     -- Enable [s| |] syntax for multilines string
                     , QuasiQuotes
                     -- Enable aligning import
                     , ImportQualifiedPost
                     -- For the new record dot syntax
                     , DuplicateRecordFields
                     , OverloadedRecordDot
  default-language:    GHC2021

library
  import:              common-options
  build-depends:       aeson >= 2
                     , algebraic-graphs >= 0.7
                     , cgroup-rts-threads
                     , mtl
                     , attoparsec
                     , transformers
                     , cron
                     , lens
                     , generic-lens
                     , text
                     , streaming
                     , directory
                     , filepath
                     , uri-encode
                     , bytestring
                     , yaml
                     , containers
                     , unordered-containers
                     , vector
                     , ini
                     , witch
                     , clock
                     , typed-process
                     , exceptions
                     , hashable
                     , network-uri
                     , http-types
                     , wai
                     , with-utf8
                     , th-env
                     , unix
                     -- Monitoring
                     , pretty-simple
                     , fast-logger
                     , network
                     , prometheus-client
                     , prometheus-metrics-ghc
                     -- UI
                     , servant-server >= 0.19
                     , warp
                     , lucid
                     , servant-lucid
                     , string-qq
                     , http-api-data
  hs-source-dirs:      src
  exposed-modules:     Zuul.ZooKeeper
                     , Zuul.Config
                     , Zuul.ConfigLoader
                     , Zuul.Tenant
                     , Zuul.ServiceConfig
                     , ZuulWeeder
                     , ZuulWeeder.Prelude
                     , ZuulWeeder.Graph
                     , ZuulWeeder.Monitoring
                     , ZuulWeeder.UI
                     , ZuulWeeder.UI.App
                     , ZuulWeeder.UI.CSS
                     , ZuulWeeder.UI.Colors
                     , ZuulWeeder.UI.D3
                     , ZuulWeeder.UI.Dot
                     , ZuulWeeder.UI.Vertex
                     , ZuulWeeder.UI.Info
                     , ZuulWeeder.UI.Tree
  other-modules:       Paths_zuul_weeder
  autogen-modules:     Paths_zuul_weeder


executable zuul-weeder
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       zuul-weeder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-T

test-suite zuul-weeder-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       tasty                      >= 0.11.2   && < 1.5
                     , tasty-hunit                >= 0.10     && < 0.11
                     , tasty-golden
                     , containers
                     , text
                     , aeson
                     , yaml
                     , zuul-weeder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
